Fixes #4 Media text should be vertically aligned vih/vih-build#23

--- a/assets/sass/partials/_view.scss
+++ b/assets/sass/partials/_view.scss
@@ -8,7 +8,9 @@
 
 // Lange Kurser
 // --------------------------------------------------
-.view-lange-kurser {
+.view-lange-kurser,
+.view-short-courses,
+.view-vih-lectures {
   .media-left {
     width: 200px;
     height: 200px;
@@ -19,5 +21,6 @@
   }
   .media-body {
     vertical-align: middle;
+    width: auto;
   }
 }
